--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -6,6 +6,7 @@ networks:
   healthNetwork:
 
 volumes: 
+  ordererhp.healthcare.com:
   peer0.hprovider.healthcare.com:
   peer1.hprovider.healthcare.com:
   peer2.hprovider.healthcare.com:
@@ -98,40 +99,36 @@ services:
       - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
       - CORE_PEER_ID=peer0.hprovider.healthcare.com
       - CORE_PEER_ADDRESS=peer0.hprovider.healthcare.com:7051
-      # - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.hprovider.healthcare.com:7041
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.hprovider:5984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=admin
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.hprovider:5984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer0.hprovider
+    depends_on:
+      - couchdb.peer0.hprovider
     ports:
       - 7051:7051
       - 7053:7053
     networks:
       - healthNetwork
 
-  # couchdb.peer0.hprovider:
-  #   container_name: couchdb.peer0.hprovider
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:5984/member_db
-  #     - COUCHDB_USER=admin
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer0.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "5984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer0.hprovider:
+    container_name: couchdb.peer0.hprovider
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "5984:5984"
+    networks:
+      - healthNetwork
       
 
   peer1.hprovider.healthcare.com:
@@ -145,36 +142,33 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.hprovider:6984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=peer1Hprovider
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.hprovider:6984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer1.hprovider
+    depends_on:
+      - couchdb.peer1.hprovider
     ports:
       - 8051:7051
       - 8053:7053
     networks:
       - healthNetwork
 
-  # couchdb.peer1.hprovider:
-  #   container_name: couchdb.peer1.hprovider
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:6984/member_db
-  #     - COUCHDB_USER=peer1Hprovider
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "6984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer1.hprovider:
+    container_name: couchdb.peer1.hprovider
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "6984:5984"
+    networks:
+      - healthNetwork
   
   
   peer2.hprovider.healthcare.com:
@@ -188,36 +182,33 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.hprovider:7984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=peer2Hprovider
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.hprovider:7984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer2.hprovider
+    depends_on:
+      - couchdb.peer2.hprovider
     ports:
       - 9051:7051
       - 9053:7053
     networks:
       - healthNetwork
 
-  # couchdb.peer2.hprovider:
-  #   container_name: couchdb.peer2.hprovider
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:7984/member_db
-  #     - COUCHDB_USER=peer2Hprovider
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "7984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer2.hprovider:
+    container_name: couchdb.peer2.hprovider
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "7984:5984"
+    networks:
+      - healthNetwork
 
   peer3.hprovider.healthcare.com:
     container_name: peer3.hprovider.healthcare.com
@@ -230,36 +221,33 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.hprovider.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.hprovider:8984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=peer3Hprovider
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.hprovider:8984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer3.hprovider
+    depends_on:
+      - couchdb.peer3.hprovider
     ports:
       - 10051:7051
       - 10053:7053
     networks:
       - healthNetwork
 
-  # couchdb.peer3.hprovider:
-  #   container_name: couchdb.peer3.hprovider
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:8984/member_db
-  #     - COUCHDB_USER=peer3Hprovider
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "8984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer3.hprovider:
+    container_name: couchdb.peer3.hprovider
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "8984:5984"
+    networks:
+      - healthNetwork
 
   peer0.research.healthcare.com:
     container_name: peer0.research.healthcare.com
@@ -272,36 +260,33 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.research:9984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=peer0Research
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.research:9984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer0.research
+    depends_on:
+      - couchdb.peer0.research
     ports:
       - 11051:7051
       - 11053:7053
     networks:
       - healthNetwork
 
-  # couchdb.peer0.research:
-  #   container_name: couchdb.peer0.research
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:9984/member_db
-  #     - COUCHDB_USER=peer0Research
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "9984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer0.research:
+    container_name: couchdb.peer0.research
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "9984:5984"
+    networks:
+      - healthNetwork
 
   peer1.research.healthcare.com:
     container_name: peer1.research.healthcare.com
@@ -314,36 +299,33 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.research:10984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=peer1Research
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.research:10984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer1.research
+    depends_on:
+      - couchdb.peer1.research
     networks:
       - healthNetwork
     ports:
       - 12051:7051
       - 12053:7053
 
-  # couchdb.peer1.research:
-  #   container_name: couchdb.peer1.research
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:10984/member_db
-  #     - COUCHDB_USER=peer1Research
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "10984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer1.research:
+    container_name: couchdb.peer1.research
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "10984:5984"
+    networks:
+      - healthNetwork
 
   peer2.research.healthcare.com:
     container_name: peer2.research.healthcare.com
@@ -356,36 +338,33 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.research:11984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=peer2Research
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.research:11984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer2.research
+    depends_on:
+      - couchdb.peer2.research
     networks:
       - healthNetwork
     ports:
       - 13051:7051
       - 13053:7053
 
-  # couchdb.peer2.research:
-  #   container_name: couchdb.peer2.research
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:11984/member_db
-  #     - COUCHDB_USER=peer2Research
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer2.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "11984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer2.research:
+    container_name: couchdb.peer2.research
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "11984:5984"
+    networks:
+      - healthNetwork
 
   peer3.research.healthcare.com:
     container_name: peer3.research.healthcare.com
@@ -398,36 +377,33 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.research.healthcare.com:7051
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
-      # - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.research:12984
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=peer3Research
-      # - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=adminpw
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.research:12984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/tls:/etc/hyperledger/fabric/tls
       - ./channel/crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/:/etc/hyperledger/crypto/peer
-    # depends_on:
-    #   - couchdb.peer3.research
+    depends_on:
+      - couchdb.peer3.research
     networks:
       - healthNetwork
     ports:
       - 14051:7051
       - 14053:7053
 
-  # couchdb.peer3.research:
-  #   container_name: couchdb.peer3.research
-  #   image: hyperledger/fabric-couchdb:0.4.10
-  #   environment:
-  #     - DB_URL=http://localhost:12984/member_db
-  #     - COUCHDB_USER=peer3Research
-  #     - COUCHDB_PASSWORD=adminpw
-  #   volumes:
-  #     - ./couchdbData/couchdb.peer3.hprovider/:/opt/couchdb/data
-  #   ports:
-  #     - "12984:5984"
-  #   networks:
-  #     - healthNetwork
+  couchdb.peer3.research:
+    container_name: couchdb.peer3.research
+    image: hyperledger/fabric-couchdb:0.4.10
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - "12984:5984"
+    networks:
+      - healthNetwork
 
   cli:
     container_name: cli
